[project]
name = "mcp_dsa"
version = "0.1.0"
description = "MCP para keyword research y análisis de entidades"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = ["fastmcp==2.12.3",
    "aiohttp==3.12.11",
    "crawl4ai==0.6.3",
    "mcp>=1.24.0,<2.0",
    "nltk==3.9.1",
    "numpy>=1.26.0,<2.0.0",  # Cambiar a versión compatible con crawl4ai
    "pandas==2.3.0",
    "protobuf==4.25.3",
    "pydantic>=2.12.2",
    "python-dotenv==1.1.0",
    "spacy>=3.7.0,<3.8.0",   # Usar rango para mejor compatibilidad
    "google-cloud-language>=2.0.0"
]

[project.scripts]
mcp-dsa = "mcp_dsa:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
